tests/sksl/errors/OverflowUintLiteral.glsl
### Compilation failed:

error: 4: integer is out of range for type 'uint': -1
error: 6: integer is too large: 4294967296
error: 8: integer is out of range for type 'ushort': -1
error: 9: integer is out of range for type 'ushort': 65536
4 errors
